--- a/package.json
+++ b/package.json
@@ -6,7 +6,12 @@
         "node-red-contrib-opcua": "0.2.113",
         "node-red-contrib-phidget22": "1.0.3",
         "node-red-contrib-pid": "1.1.7",
-        "node-red-dashboard": "2.28.1"
+        "node-red-dashboard": "2.28.1",
+        "node-red-contrib-easing": "0.2.2",
+        "node-red-contrib-influxdb": "0.6.0",
+        "node-red-contrib-msg-resend": "1.0.0",
+        "node-red-node-rbe": "0.5.0",
+        "node-red-node-smooth": "0.1.2"
     },
     "node-red": {
         "settings": {
